--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: alh_calendar
-description: A package for creating a custom calendar-widget. Builder-methods make it possible to design the calendar according to the given situation.
+description: A package for creating a custom calendar-widget.
+  Builder-methods make it possible to design the calendar according to the given situation.
 version: 0.0.1
 homepage:
 
