--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,8 @@ version: 1.0.0
 repository: https://github.com/alhappler/alh_calendar
 
 environment:
-  sdk: ">=2.17.6 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: '>=3.3.1 <4.0.0'
+  flutter: '>=3.3.0'
 
 dependencies:
   flutter:
